<resources>
    <string name="app_name">YALTA</string>
    <string name="login">Login</string>
    <string name="go">Go!</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="logout">Logout</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="routes">Routes</string>
    <string name="change_password">Change password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="passwords_differ">Passwords differ!</string>
    <string name="connection_failed">Connection failed</string>
    <string name="permissions_request">Please, add location permissions and restart the app</string>
    <string name="points">Points</string>
    <string name="search">Search</string>
    <string name="create_new_point">Create new point</string>
    <string name="name">Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="create_point">Create point</string>
    <string name="set_current_location">Set current location</string>
    <string name="fields_can_not_be_empty">Fields can not be empty</string>
    <string name="dates_error">Selected From date is later than To date</string>
    <string name="select_date_range_for_routes">Select date range for routes</string>
    <string name="point_state">Point state</string>
    <string name="formatted_username">Username: %s</string>
    <string name="formatted_role">Role: %s</string>
    <string name="update_point">Update point</string>
</resources>
