<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:textSize="20pt"
        android:id="@+id/login"
        android:maxLines="1" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_width="250dp"
        android:hint="@string/username"
        android:id="@+id/username"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/login"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="250dp"
        android:hint="@string/password"
        android:id="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:layout_marginTop="25dp"
        android:importantForAutofill="no"
        android:imeOptions="actionDone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/go"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:id="@+id/goButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_username_or_password"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        android:id="@+id/errorText" />

</androidx.constraintlayout.widget.ConstraintLayout>