<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.yalta.viewmodel.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/change_password_window_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ChangePasswordActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/change_password_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardCornerRadius="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/change_password_container"
                android:layout_width="250dp"
                android:minHeight="200dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <EditText
                    android:id="@+id/enter_field"
                    android:inputType="textPassword"
                    android:importantForAutofill="no"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:maxLines="1"
                    android:hint="@string/enter_new_password"
                    android:imeOptions="actionNext"
                    android:defaultFocusHighlightEnabled="false"
                    android:text="@={viewModel.firstPassword}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/reenter_field" />

                <EditText
                    android:id="@+id/reenter_field"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="3dp"
                    android:defaultFocusHighlightEnabled="false"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/repeat_new_password"
                    android:text="@={viewModel.secondPassword}"
                    app:layout_constraintBottom_toTopOf="@+id/error"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enter_field" />


                <TextView
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwords_differ"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reenter_field"
                    app:layout_constraintBottom_toTopOf="@+id/ok_button" />


                <Button
                    android:id="@+id/close_button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/error" />

                <Button
                    android:id="@+id/ok_button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/ok"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/error"
                    android:onClick="@{() -> viewModel.changePassword()}" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
